# django-message-tag-error

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
demo/: admin.py  apps.py  models.py  views.py
demo/migrations/: 0001_initial.py
demo/templates/admin/: base_site.html
demo/templates/demo/: index.html
django_message_tag_error/: asgi.py  settings.py  urls.py  wsgi.py
django_message_tag_error/static/css/: custom_admin_base.css
