[tool.poetry]
name = "django-message-tag-error"
version = "0.1.0"
description = "Demonstrate error with overriding MESSAGE_TAGS"
authors = ["Michael Foulds <mfoulds@navigatus.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-admin-interface = "^0.28.8"
django-apptemplates = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
